<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/daily_product"
                android:fontFamily="@font/roboto_light"
                android:layout_margin="8dp"
                android:textSize="30sp"
                />

            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:cardview="http://schemas.android.com/apk/res-auto"

                android:layout_width="match_parent"
                android:layout_height="@dimen/height_cardview_oftheday"

                cardview:cardCornerRadius="@dimen/cornerradius_cardview"

                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_margin="10dp"
                android:id="@+id/layoutProductDelDia"
                >

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/ivImageProduct"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/sandwichtest"
                        android:scaleType="centerCrop"
                        android:transitionName="@string/transitionname_picture"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:orientation="horizontal"

                        android:layout_gravity="bottom"

                        android:paddingLeft="@dimen/activity_vertical_margin"
                        android:paddingBottom="@dimen/activity_vertical_margin"

                        android:background="@color/backgroundtext_card"
                        >

                        <TextView
                            android:id="@+id/tvNameProduct"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/bocatanameexample_card"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/textsize_bocataname_card"
                            android:layout_weight="1"
                            />

                        <TextView
                            android:id="@+id/tvPriceProduct"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="1€"
                            android:layout_gravity="right"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/textsize_bocataname_card"
                            android:layout_weight="3"
                            android:layout_marginRight="20dp"
                            />


                    </LinearLayout>

                </FrameLayout>

            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/last_prod_added"
                android:fontFamily="@font/roboto_light"
                android:layout_margin="8dp"
                android:textSize="30sp"
                />

            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:cardview="http://schemas.android.com/apk/res-auto"

                android:layout_width="match_parent"
                android:layout_height="@dimen/height_cardview_oftheday"

                cardview:cardCornerRadius="@dimen/cornerradius_cardview"

                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_margin="10dp"
                android:id="@+id/layoutLastProdAdded"
                >

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/ivImageProductLast"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/sandwichtest"
                        android:scaleType="centerCrop"
                        android:transitionName="@string/transitionname_picture"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:orientation="horizontal"

                        android:layout_gravity="bottom"

                        android:paddingLeft="@dimen/activity_vertical_margin"
                        android:paddingBottom="@dimen/activity_vertical_margin"

                        android:background="@color/backgroundtext_card"
                        >

                        <TextView
                            android:id="@+id/tvNameProductLast"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/bocatanameexample_card"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/textsize_bocataname_card"
                            android:layout_weight="1"
                            />

                        <TextView
                            android:id="@+id/tvPriceProductLast"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="1€"
                            android:layout_gravity="right"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/textsize_bocataname_card"
                            android:layout_weight="3"
                            android:layout_marginRight="20dp"
                            />


                    </LinearLayout>

                </FrameLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>

</LinearLayout>