<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:fitsSystemWindows="true"

    tools:context="cat.iam.bocatas.app.views.ProductActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/colorPrimary"
            >

            <ImageView
                android:id="@+id/imageHeader"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/sandwichtest"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                android:fitsSystemWindows="true"
                android:transitionName="@string/transitionname_product"
                />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_gravity="bottom"
                android:background="#53292929"
                >

            </LinearLayout>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:padding="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="6">

                    <TextView
                        android:id="@+id/tvAPPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="left"
                        android:textColor="#000000"
                        android:textSize="25sp"
                        android:fontFamily="@font/roboto_light"
                        android:text="3.15 €"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_light"
                        android:layout_marginTop="30dp"

                        android:text="@string/titleIngredients"
                        android:textColor="#000000"
                        android:textSize="25sp"

                        />

                   <!-- <TextView
                        android:id="@+id/llistaIngredients"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_light"
                        android:layout_marginTop="30dp"

                        android:text="@string/exampleIngredients"
                        android:textColor="#000000"
                        android:textSize="18sp"

                        />
                    -->

                    <ListView
                        android:id="@+id/listViewIngredients"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">
                    </ListView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="4"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    >

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="40dp"
                        android:layout_marginRight="40dp"
                        android:layout_marginBottom="15dp"
                        android:theme="@style/EditTextBlack"

                        >

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/etUnities"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/paEtUnits"
                            android:fontFamily="@font/roboto_light"
                            android:digits="1234567890"
                            android:lines="1"
                            android:inputType="number"
                            android:maxLength="2"
                            android:cursorVisible="true"
                            android:gravity="center"

                            />

                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorAccentLight"
                        android:layout_margin="20dp"
                        android:textColor="#ffffff"
                        android:fontFamily="@font/roboto_light"
                        android:textSize="20sp"
                        android:padding="10dp"
                        android:text="@string/addProductToCheckOut"
                        android:onClick="addToCheckout"
                        />

                    <ImageButton
                        android:id="@+id/ibCheckout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@color/colorAccentLight"
                        android:layout_margin="20dp"
                        android:padding="5dp"
                        android:src="@drawable/carro" />


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/likeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/heartempty"
        app:layout_anchor="@id/appBar"
        app:layout_anchorGravity="bottom|end"
        android:onClick="onClickLikeButton"
        />


</android.support.design.widget.CoordinatorLayout>
